--- a/WebCovid19/Views/Necesidades/Crear.cshtml
+++ b/WebCovid19/Views/Necesidades/Crear.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.Necesidades
+﻿@model Entidades.Views.VMNecesidad
 
 @{
     ViewBag.Title = "Crear - Necesidad";
@@ -15,6 +15,7 @@
     <h4>Necesidades</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @{ #region }
     <div class="form-group">
         @Html.LabelFor(model => model.Nombre, "Nombre: ")
         <div class="col-md-10">
@@ -60,22 +61,20 @@
     <div class="form-group">
         <label for="Foto">Imagen: </label>
         <div class="col-md-10">
-            <input type="file" name="Foto" id="Foto" accept="image/jpg, image/jpeg, image/png" class="form-control-file" onchange="obtenerNombre(this.name())"/>
-            @Html.EditorFor(model => model.Foto, new {@class = "display-none", @value = "", @id ="nombreFoto"})
+            <input type="file" name="Foto" id="Foto" accept="image/jpg, image/jpeg, image/png" class="form-control-file" onchange="obtenerNombre(this.name())" />
+            @Html.EditorFor(model => model.Foto, new { @class = "display-none", @value = "", @id = "nombreFoto" })
             @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
         </div>
     </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-primary" />
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+    @{ #endregion }
+        <div class="btn-group">
+            <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
+            <div class="col-2"></div>
             <input type="reset" value="Reiniciar" class="btn btn-primary" />
+            <div class="col-2"></div>
+            @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
         </div>
-    </div>
+
 </div>
 }
 
