--- a/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
@@ -23,20 +23,21 @@
                 <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError</div>
             } <br />
 
-              <center>
-                  Aceite:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                  @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
+            <center>
+                Aceite:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
+                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
 
-                  Fideos:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                  @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
+                Fideos:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
+                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
 
-                  Lavandina:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                  @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
+                Lavandina:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
+                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
 
-              </center>
+            </center>
             <br />
+
             <div class="col-md-12 btn-group mt-4">
-                <button type="button" class="btn btn-danger" onclick="location.href='/Home/IndexLogueado'">Cancelar</button>
+                @Html.ActionLink("Cancelar", "IndexLogueado", "Home", null, new { @class = "btn btn-primary" })
                 <button type="submit" class="btn btn-primary ml-2">Enviar</button>
             </div>
         }
