--- a/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
@@ -1,19 +1,20 @@
-﻿@model WebCovid19.DonacionesInsumos
+﻿@model WebCovid19.Models.Views.VMDonacionMonetaria
 
 @{
-    ViewBag.Title = "Donación de insumos";
+    ViewBag.Title = "DonacionMonetaria";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 <br>
 <br>
-<center><h2>Donación de insumos</h2></center>
+
+<center><h2>Donación Monetaria</h2></center>
 
 <div class="card mb-3 mt-5">
     <div class="card-body  mt-5">
-        <h5 class="card-title text-center">Realizar donación de insumos</h5><br>
+        <h5 class="card-title text-center">Realizar Donación Monetaria</h5><br>
 
 
-        @using (Html.BeginForm("DonacionInsumos", "DonacionInsumos", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
+        @using (Html.BeginForm("DonacionMonetaria", "DonacionMonetaria", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
         {
 
             @Html.AntiForgeryToken()
@@ -21,22 +22,18 @@
             if (ViewBag.mensajeError != null) //Mensaje que esta en el controller.
             {
                 <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError</div>
-            } <br />
+            }
 
-            <center>
-                Aceite:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
 
-                Fideos:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
-
-                Lavandina:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
-
-            </center>
-            <br />
+            <div class="wrap-input100 validate-input">
+                @*Inputs con razor*@
+                @Html.EditorFor(model => model.Dinero, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.Dinero) } })
+                <span class="focus-input100" data-placeholder="&#xe813;"></span>
+                @Html.ValidationMessageFor(model => model.Dinero, "", new { @class = "text-danger" })
+            </div>
 
             <div class="col-md-12 btn-group mt-4">
+
                 @Html.ActionLink("Cancelar", "IndexLogueado", "Home", null, new { @class = "btn btn-primary" })
                 <button type="submit" class="btn btn-primary ml-2">Enviar</button>
             </div>
