--- a/WebCovid19/Views/Usuario/Perfil.cshtml
+++ b/WebCovid19/Views/Usuario/Perfil.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entidades.Views.VMPerfil
+﻿@model Entidades.Usuarios
 
 @{
     ViewBag.Title = "Perfil";
@@ -27,9 +27,9 @@
             <div class="p-3 mb-2 bg-danger text-white">@mensajeError</div>
         }
         @if (mensajeCorrecto != null)
-            {
-                <div class="p-3 mb-2 bg-success text-white">@mensajeCorrecto</div>
-            }
+        {
+            <div class="p-3 mb-2 bg-success text-white">@mensajeCorrecto</div>
+        }
 
 
 
@@ -39,16 +39,37 @@
 
 
                     <div class="card" id="card">
-                        <img class="rounded-circle border border-white mx-auto d-block  ml-5 mt-5 mb-2" id="imgperfil" src="~/Content/Img/imagenPerfil-Nula.png" />
+
+                        @if (Model.Foto == null)
+                        {
+                            <img class="rounded-circle border border-white mx-auto d-block  ml-5 mt-5 mb-2" id="imgperfil" src="~/Content/Img/imagenPerfil-Nula.png" />
+
+                        }
+                        else
+                        {
+                            <img class="rounded-circle border border-white mx-auto d-block  ml-5 mt-5 mb-2" id="imgperfil" src="@Model.Foto" />
+                        }
+
 
                         <div class="col-md-12">
                             <div class="card-body">
-                                <h3 class="text-center">Turco Mohamed</h3>
+                                @if (Model.UserName != null)
+                                {
+                                    <h3 class="text-center">@Model.UserName</h3>
+                                }
+
 
                                 <div class="input-group mb-3">
                                     <div class="form-group">
-                                        <input type="file" class="form-control-file" id="exampleFormControlFile1" name="Foto">
-                                        <br /> @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
+                                        @if (Model.Foto != null)
+                                        {
+                                            @Html.ActionLink("Cambiar foto", "IndexLogueado", "Usuario", null, new { @class = "btn btn-danger" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(model => model.Foto, new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" })
+                                        }
+
                                     </div>
                                 </div>
                             </div>
@@ -69,7 +90,15 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="inputGroup-sizing-default">Nombre</span>
                                     </div>
-                                    @Html.EditorFor(o => o.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                                    @if (Model.Nombre == null)
+                                    {
+                                        @Html.EditorFor(o => o.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                                    }
+                                    else
+                                    {
+                                        @Html.EditorFor(o => o.Nombre, new { htmlAttributes = new { @class = "form-control disabled", @disabled = "disabled", value = Model.Nombre } })
+                                    }
+
                                     @*Para Disabled @Html.EditorFor(o => o.Nombre, new { htmlAttributes = new { @class = "form-control disabled", @disabled="disabled", placeholder="Nombre" } }) *@
                                     <br /> @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                                 </div>
@@ -78,8 +107,15 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="inputGroup-sizing-default">Apellido</span>
                                     </div>
-                                    @Html.EditorFor(o => o.Apellido, new { htmlAttributes = new { @class = "form-control" } })
-                                    @*Para Disabled @Html.EditorFor(o => o.Apellido, new { htmlAttributes = new { @class = "form-control disabled", @disabled="disabled", placeholder="Nombre" } }) *@
+                                    @if (Model.Apellido == null)
+                                    {
+                                        @Html.EditorFor(o => o.Apellido, new { htmlAttributes = new { @class = "form-control" } })
+                                    }
+                                    else
+                                    {
+                                        @Html.EditorFor(o => o.Apellido, new { htmlAttributes = new { @class = "form-control disabled", @disabled = "disabled", value = Model.Apellido } })
+                                    }
+
                                     <br /> @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
                                 </div>
 
@@ -92,15 +128,17 @@
 
 
                             </div>
+                            <div class="text-center">
+                                @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
+                            </div>
                             <div class="col-md-12 btn-group mb-4">
-                                <a type="button" class="btn btn-danger" href="~/Home/IndexLogueado">Cancelar</a>
+                                @Html.ActionLink("Cancelar", "IndexLogueado", "Usuario", null, new { @class = "btn btn-danger" })
                                 <button type="submit" class="btn btn-primary ml-2">Guardar datos</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 }
