--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -52,8 +52,12 @@
 
                     </li>
                     <li class="nav-item active my-sm-2">
+
                         <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
                         @Html.ActionLink("Crear Necesidad", "Crear", "Necesidades", null, new { @class = "nav-link hover text-light" })
+
+                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
+                        @Html.ActionLink("Acerca de", "acerca-de", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
 
