--- a/WebCovid19/Views/Usuario/Administrador.cshtml
+++ b/WebCovid19/Views/Usuario/Administrador.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Entidades.Denuncias>
+﻿@model List<Entidades.Necesidades>
 @{
     ViewBag.Title = "Administrador";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
@@ -9,7 +9,6 @@
 <div class="text-center mt.5" id="margin-top-header">
     <h1>Gestion de Denuncias</h1>
 </div>
-
 
 
 <div class="col-md-12 ">
@@ -32,52 +31,51 @@
             <div class="p-3 mb-2 bg-danger text-white">@mensajeError</div>
         }
 
-        foreach (var denuncia in Model.OrderBy(o => o.FechaCreacion))
+        foreach (var necesidad in Model.OrderBy(o => o.FechaFin).Distinct())
         {
+
+
+
+
             using (Html.BeginForm("DenunciaEvaluada", "Usuario", FormMethod.Post, new { @class = "col-md-12" }))
             {
 
                 <div class="col-md-12 mt-4 mb-3 float-auto">
 
                     <div class="card" id="card">
-                        <img class="mx-auto d-block  ml-5 mt- mb-2" id="imagen-necesidad" src="~/Content/Img/@denuncia.Necesidades.Foto" />
-                   
-               
-                    
+                        <img class="mx-auto d-block  ml-5 mt- mb-2" id="imagen-necesidad" src="@necesidad.Foto" />
+
+
+
                         <div class="col-md-12">
 
                             <div class="card-body mt-2">
-                                <h2 class="text-center col-md-12">@denuncia.Necesidades.Nombre</h2>
+                                <h2 class="text-center col-md-12">@necesidad.Nombre</h2>
 
                                 <div class="input-group mb-3 text-center">
 
                                     <div class="col-md-6 text-center">
                                         <b>Usuario</b>
                                         <div class="col-md-12 text-center">
-                                            <p> @denuncia.Usuarios.UserName</p>
+                                            <p> @necesidad.Usuarios.UserName</p>
                                         </div>
                                     </div>
 
                                     <div class="col-md-6 text-center">
                                         <b>Descripcion</b>
                                         <div class="col-md-12 text-center">
-                                            <p>  @denuncia.Necesidades.Descripcion</p>
+                                            <p>  @necesidad.Descripcion</p>
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <b>Motivo de denuncia:</b>
                                         <div class="col-md-12 text-center">
-                                            @switch (@denuncia.IdMotivo)
+                                            @foreach (var denuncias in necesidad.Denuncias.GroupBy(den => den.MotivoDenuncia.Descripcion))
                                             {
-                                                case 1:<h4 class="text-danger ">Fraude</h4>
-                                                    break;
-                                                case 2:<h4 class="text-danger ">Indebida</h4>
-                                                    break;
-                                                case 3:<h4 class="text-danger ">Violación de derechos</h4>
-                                                    break;
-                                                case 4:<h4 class="text-danger ">Contiene información política</h4>
-                                                    break;
+
+                                            <h4 class="text-danger"> @denuncias.Key</h4>
+
                                             }
 
                                         </div>
@@ -85,7 +83,7 @@
                                     <div class="col-md-6">
                                         <b>Fecha de creacion: </b>
                                         <div class="col-md-12 text-center">
-                                            <p><span class="fa fa-calendar"></span> @denuncia.FechaCreacion</p>
+                                            <p><span class="fa fa-calendar"></span> @necesidad.FechaCreacion</p>
                                         </div>
 
                                     </div>
@@ -93,7 +91,24 @@
                                     <div class="col-md-6">
                                         <b>Comentario acerca de la denuncia: </b>
                                         <div class="col-md-12 text-center">
-                                            <p><i class="fa fa-user-circle" aria-hidden="true"></i> @denuncia.Comentarios</p>
+
+                                            <p>
+                                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                                                    Comentarios
+                                                </a>
+
+                                            </p>
+                                            <div class="collapse" id="collapseExample">
+                                                <div class="card card-body">
+                                                    <p><b>Cantidad de comentarios: @necesidad.Denuncias.Count </b></p>
+                                                    @foreach (var denuncias in necesidad.Denuncias)
+                                                    {
+                                                    <p><i class="fa fa-user-circle" aria-hidden="true"></i> @denuncias.Comentarios</p><br />
+                                                    <input type="hidden" name="IdDenuncia" value="@denuncias.IdDenuncia" />
+                                                    }
+                                                </div>
+                                            </div>
+
                                         </div>
                                     </div>
 
@@ -102,14 +117,14 @@
 
                                         <div class="form-row text-center">
                                             <div class="col-12">
-                                                <button class="btn btn-warning text-light float-auto">Detalles</button>
+                                                <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-warning text-light float-auto">Detalles</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <input type="hidden" name="idNecesidad" value="@denuncia.Necesidades.IdNecesidad" />
-                            <input type="hidden" name="IdDenuncia" value="@denuncia.IdDenuncia" />
+                            <input type="hidden" name="IdNecesidad" value="@necesidad.IdNecesidad" />
+                            
                             <div class="col-md-12 btn-group mb-3">
                                 <button type="submit" name="Desestimar" class="btn btn-danger">Desestimar</button>
                                 <button type="submit" name="Bloquear" class="btn btn-success ml-2">Bloquear</button>
@@ -118,6 +133,9 @@
                     </div>
                 </div>
             }
+
         }
+
     }
+
 </div>
