--- a/WebCovid19/Views/Necesidades/Modificar.cshtml
+++ b/WebCovid19/Views/Necesidades/Modificar.cshtml
@@ -6,7 +6,7 @@
 }
         <div class="row">
             <div class="col offset-md-2 col-md-8 text-center border border-primary">
-                @using (Html.BeginForm("Modificar", "Necesidades", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                @using (Html.BeginForm("Modificar/"+Model.IdNecesidad, "Necesidades", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
                     @Html.AntiForgeryToken()
 
@@ -14,31 +14,32 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <label>Nombre:</label>
                         @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+                       <label>Descripcion:</label>
                         @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.TelefonoContacto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <label>Teléfono de contacto:</label>
                         @Html.EditorFor(model => model.TelefonoContacto, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.TelefonoContacto, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2"})
+                        <label>Fecha de finalización: </label>
+
                         @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", Type = "date" } })
                         @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <label>Foto:</label>
                         @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" } })
                         @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
                     </div>
